service-simple-restapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-restapi-service
  labels:
    app: simple-restapi
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: simple-restapi
